# spooldex-humidity-tracker

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: ALIEXPRESS_LINKS.md  FLASHING_SENSORS.md  WIRING.md
firmware/: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  check.sh  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig  ble_scanner.c  ble_scanner.h  config_manager.c  config_manager.h  display.c  display.h  http_push.c  http_push.h  main.c  mqtt_client.c  mqtt_publisher.h  ota_update.c  ota_update.h  sensor_db.c  sensor_db.h  status_led.c  status_led.h  version.h  wifi_provision.c  wifi_provision.h
