idf_component_register(
    SRCS
        "main.c"
        "ble_scanner.c"
        "mqtt_client.c"
        "http_push.c"
        "display.c"
        "sensor_db.c"
        "config_manager.c"
        "wifi_provision.c"
        "status_led.c"
    INCLUDE_DIRS "."
    REQUIRES
        bt
        nvs_flash
        esp_wifi
        esp_event
        mqtt
        esp_http_client
        esp_http_server
        driver
        esp_timer
        esp_netif
)
